# dogneo

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/demo/: canine_osteosarcoma.vcf
data/reference/: DLA-88_alleles.fasta
docs/plans/: 2026-03-22-v0.2-fullstack-design.md
dogneo/: __init__.py  cli.py  config.py
dogneo/app/: __init__.py  rank_pipeline.py  rerank_pipeline.py
dogneo/core/: __init__.py  binding.py  dla_estimator.py  dla_typing.py  expression.py  iedb_client.py  mrna_designer.py  peptides.py  ranking.py  variants.py
dogneo/data/: manager.py
dogneo/data/demo/: dla_alleles.txt  expression.sf
dogneo/export/: __init__.py  exporters.py
dogneo/llm/: __init__.py  backends.py  cli_wrapper.py  explainer.py  prompts.py  router.py
dogneo/pipeline/: Snakefile  __init__.py  config.yaml
dogneo/report/: __init__.py  generator.py
dogneo/ui/: __init__.py  app.py  charts.py
tests/: conftest.py  test_binding_integration.py  test_cli_rank_auto.py  test_cli_setup_demo.py  test_cli_wrapper.py  test_data_manager.py  test_demo_cache.py  test_dla_estimator.py  test_explainer.py  test_exporters.py  test_iedb_client.py  test_llm_router.py  test_mrna_designer.py  test_peptides.py  test_rank_pipeline.py  test_ranking.py  test_rerank_cli.py  test_rerank_pipeline.py  test_ui_charts.py  test_variants.py
tests/data/: alleles.txt  proteins.fasta  salmon_quant.sf  sample.vcf
